hphp/test/zend/bad/Zend/tests/traits/language019.php
<?php
trait T1 {
	function foo() {}
}
class C1 {
	use T1 {
		T1::foo as final;
	}
}
?>